--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
                 </div>
             </div>
         </div>
+        <footer class="pds-footer">
+            <div class="pds-container">
+                <p>PandaStore - Hệ thống cửa hàng bán lẻ điện thoại, 
+                máy tính bảng, MacBook, phụ kiện chính hãng. 
+                Cam kết giá tốt với cửa hàng tại Tp. Hồ Chí Minh.</p>
+                <p><i>Email: cskh@pandastore.com</i> <strong>PandaStore &copy; 2022</strong> </p>
+            </div>
+        </footer>
     </div>
    </div>
 </body>
