--- a/index.html
+++ b/index.html
@@ -86,18 +86,59 @@
             </header>
         </div>
         <div class="pds-container mt-4">
-            <div class="pds-homepage">
-                <div class="w3-content w3-display-container" style="max-width:800px">
-                    <img class="mySlides" src="assets/img/m2.png" style="width:100%">
-                    <img class="mySlides" src="assets/img/max.png" style="width:100%">
-                    <img class="mySlides" src="assets/img/s222.png" style="width:100%">
-                    <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-                      <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-                      <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-                      <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-                      <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-                      <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+            <div class="pds-homepage is-flex">
+                <div class="block-top-left">
+                    <div class="w3-content w3-display-container" >
+                        <img class="mySlides" src="assets/img/m2.png" >
+                        <img class="mySlides" src="assets/img/max.png" >
+                        <img class="mySlides" src="assets/img/s222.png">
+                        <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" >
+                          <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+                          <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+                          <div>
+                            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+                            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+                            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+                          </div>
+                        </div>
                     </div>
+                </div>
+                <div class="block-top-right">
+                    <div class="right-banner">
+                        <a href="#" class="right-banner-item">
+                            <img src="assets/img/banner/690x300_RightBanner_Desktop 1.png" alt="">
+                        </a>
+                        <a href="#" class="right-banner-item">
+                            <img src="assets/img/banner/fold3right.png" alt="">
+                        </a>
+                        <a href="#" class="right-banner-item">
+                            <img src="assets/img/banner/laptop.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="horizontal-banner"></div>
+            <div class="block-product">
+                <div class="product-list-title is-flex is-flex-wrap-wrap">
+                    <a href="#" class="title">
+                        <h2>ĐIỆN THOẠI NỔI BẬT NHẤT</h2>
+                    </a>
+                    <div class="list-related-tag">
+                        <a href="#" class="related-tag">Apple</a>
+                        <a href="#" class="related-tag">Samsung</a>
+                        <a href="#" class="related-tag">Xiaomi</a>
+                        <a href="#" class="related-tag">OPPO</a>
+                        <a href="#" class="related-tag">realme</a>
+                        <a href="#" class="related-tag">Nokia</a>
+                        <a href="#" class="related-tag">ASUS</a>
+                        <a href="#" class="related-tag">Tecno</a>
+                        <a href="#" class="related-tag">vivo</a>
+                        <a href="#" class="related-tag">Xem tất cả</a>
+                    </div>
+                </div>
+                <div class="product-list">
+                    <div class="product-list-swiper">
+                        
                 </div>
             </div>
         </div>
