--- a/index.html
+++ b/index.html
@@ -237,6 +237,95 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="swiper-slide swiper-slide-next" style="width: 278px; margin-right: 10px;">
+                                        <div class="product-info-container">
+                                            <div class="product-info">
+                                                <a href="#" class="product__link">
+                                                    <div class="product__image">
+                                                        <img alt="Samsung Galaxy A13 (4G)" class="product__img"
+                                                            src="https://image.cellphones.com.vn/200x/media/catalog/product//g/a/galaxy_a13.jpg"
+                                                            lazy="loaded">
+                                                    </div>
+                                                    <!---->
+                                                    <div class="product__name">
+                                                        <h3>Samsung Galaxy A13 (4G)</h3>
+                                                    </div>
+                                                    <!---->
+                                                    <!---->
+                                                    <div class="block-box-price">
+                                                        <!---->
+                                                        <!---->
+                                                        <div class="box-info__box-price">
+                                                            <p class="product__price--show">
+                                                                3.890.000&nbsp;₫
+                                                            </p>
+                                                            <p class="product__price--through">
+                                                                4.690.000&nbsp;₫
+                                                            </p>
+                                                            <div class="product__price--percent">
+                                                                <p class="product__price--percent-detail">
+                                                                    Giảm&nbsp;17%
+                                                                </p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="product__promotions">
+                                                        <div>
+                                                            <div class="promotion">
+                                                                <p class="gift-cont">Thu cũ đổi mới - Trợ giá đến 300.000đ</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <!---->
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide swiper-slide-next" style="width: 278px; margin-right: 10px;">
+                                        <div class="product-info-container">
+                                            <div class="product-info">
+                                                <a href="#" class="product__link">
+                                                    <div class="product__image">
+                                                        <img alt="Samsung Galaxy A13 (4G)" class="product__img"
+                                                            src="https://image.cellphones.com.vn/200x/media/catalog/product//g/a/galaxy_a13.jpg"
+                                                            lazy="loaded">
+                                                    </div>
+                                                    <!---->
+                                                    <div class="product__name">
+                                                        <h3>Samsung Galaxy A13 (4G)</h3>
+                                                    </div>
+                                                    <!---->
+                                                    <!---->
+                                                    <div class="block-box-price">
+                                                        <!---->
+                                                        <!---->
+                                                        <div class="box-info__box-price">
+                                                            <p class="product__price--show">
+                                                                3.890.000&nbsp;₫
+                                                            </p>
+                                                            <p class="product__price--through">
+                                                                4.690.000&nbsp;₫
+                                                            </p>
+                                                            <div class="product__price--percent">
+                                                                <p class="product__price--percent-detail">
+                                                                    Giảm&nbsp;17%
+                                                                </p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="product__promotions">
+                                                        <div>
+                                                            <div class="promotion">
+                                                                <p class="gift-cont">Thu cũ đổi mới - Trợ giá đến 300.000đ</p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <!---->
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
                                 </div>
                                 <div class="swiper-button-prev swiper-button-disabled" tabindex="-1" role="button"
                                     aria-label="Previous slide" aria-disabled="true">&#10094;</div>
